# Translator_component_toolkit

./: .gitignore  README.md  TranslatorComponentsIntroduction.md  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: sphinx.yml
Figures/: PathFinder.graffle
TCT/: TCT.py  Translator_KPinfo.py  __init__.py  name_resolver.py  node_normalizer.py  translator_kpinfo.py  translator_metakg.py  translator_node.py  translator_query.py  trapi.py
TCT/.ipynb_checkpoints/: TCT-checkpoint.py
docs/: requirements.txt
docs/source/: TCT.rst  components.rst  conf.py  index.rst  intro.md  name_resolver.rst  node_normalizer.rst  translator_kpinfo.rst  translator_metakg.rst  translator_node.rst  translator_query.rst
docs/source/_autosummary/: TCT.TCT.rst  TCT.name_resolver.rst  TCT.node_normalizer.rst  TCT.rst  TCT.translator_node.rst
metaData/: SmartAPI_Translator_KP_info.csv  metaKG.csv
notebooks/: Annotate_graph.ipynb  Connecting_userAPI.ipynb  Connection_finder.ipynb  Connection_finder_clinicalTrial.ipynb  Network_finder.ipynb  Path_finder.ipynb  Path_finder1.ipynb  Pathfinder_3hops.ipynb  Question2Query_chatGPT.ipynb  TCT_Introduction.ipynb  multiomics_metakg.csv  overview_of_KGs.ipynb
src/: TCT.py
src/mcp_translator/: __init__.py  __main__.py  server.py
src/translator_component_toolkit/: TCT.py  __init__.py  __main__.py  node_normalizer.py  server.py  translator_metakg.py  translator_query.py
