[project]
name = "mcp-translator"
version = "0.1.0"
description = "MCP Server for Biomedical Translator Component Toolkit"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0",
    "pandas>=1.3.0",
    "fastmcp>=0.1.0",
    "mcp>=1.2.0",
    "seaborn>=0.11.0",
    "matplotlib>=3.3.0",
    "ipycytoscape>=1.3.0", 
    "networkx>=2.6.0",
    "openai>=1.0.0",
    "ipykernel>=6.0.0",
    "jsons>=1.6.0",
]

[project.scripts]
mcp-translator = "mcp_translator:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []